fix(css): adjust logo positioning to avoid overLapping register button

--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,7 @@ html, body
     bottom: 1rem;
     left: 1rem;
     gap: 0.6rem;
-    z-index: 3000;
-    top: 0;
+    z-index: 1001;
 }
 
 img.logoden{
@@ -235,7 +234,7 @@ button {
 
   .register button.btro {
   position: relative;
-  z-index: 10001;
+  z-index: 1002;
   pointer-events: auto;
   margin: 1em auto;
 }
